restructure data collection, small edits

--- a/NB01 - Data Collection.ipynb
+++ b/NB01 - Data Collection.ipynb
@@ -15,15 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "15cd1e62",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import requests\n",
-    "import json\n",
-    "import os"
+    "import json"
    ]
   },
   {
@@ -51,56 +50,24 @@
    "id": "1dfa491d",
    "metadata": {},
    "source": [
-    "Start by setting the paramaters for which data to fetch for each city:"
+    "Start by setting the paramaters for which data to fetch:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "b0ce6461",
+   "execution_count": 2,
+   "id": "5d3f78da",
    "metadata": {},
    "outputs": [],
    "source": [
     "url_endpoint = \"https://archive-api.open-meteo.com/v1/archive\"\n",
-    "london_params = {\n",
-    "    \"latitude\": 51.5085,\n",
-    "    \"longitude\": -0.1257,\n",
+    "params = {\n",
+    "    \"latitude\": [51.5085, 48.8534, 50.8505, 52.374, 53.3331],\n",
+    "    \"longitude\": [-0.1257, 2.3488, 4.3488, 4.8897, -6.2489],\n",
     "\t\"start_date\": \"2024-01-01\",\n",
     "\t\"end_date\": \"2024-12-31\",\n",
     "\t\"daily\": \"rain_sum,precipitation_hours\",\n",
-    "    \"timezone\": \"Europe/London\"\n",
-    "}\n",
-    "paris_params = {\n",
-    "    \"latitude\": 48.8534,\n",
-    "    \"longitude\": 2.3488,\n",
-    "\t\"start_date\": \"2024-01-01\",\n",
-    "\t\"end_date\": \"2024-12-31\",\n",
-    "\t\"daily\": \"rain_sum,precipitation_hours\", \n",
-    "    \"timezone\": \"Europe/Berlin\"\n",
-    "}\n",
-    "brussels_params = {\n",
-    "    \"latitude\": 50.8505,\n",
-    "    \"longitude\": 4.3488,\n",
-    "\t\"start_date\": \"2024-01-01\",\n",
-    "\t\"end_date\": \"2024-12-31\",\n",
-    "\t\"daily\": \"rain_sum,precipitation_hours\", \n",
-    "    \"timezone\": \"Europe/Berlin\"\n",
-    "}\n",
-    "amsterdam_params = {\n",
-    "    \"latitude\": 52.374,\n",
-    "    \"longitude\": 4.8897,\n",
-    "\t\"start_date\": \"2024-01-01\",\n",
-    "\t\"end_date\": \"2024-12-31\",\n",
-    "\t\"daily\": \"rain_sum,precipitation_hours\", \n",
-    "    \"timezone\": \"Europe/Berlin\"\n",
-    "}\n",
-    "dublin_params = {\n",
-    "    \"latitude\": 53.3331,\n",
-    "    \"longitude\": -6.2489,\n",
-    "\t\"start_date\": \"2024-01-01\",\n",
-    "\t\"end_date\": \"2024-12-31\",\n",
-    "\t\"daily\": \"rain_sum,precipitation_hours\", \n",
-    "    \"timezone\": \"Europe/London\"\n",
+    "    \"timezone\": [\"Europe/London\", \"Europe/Berlin\", \"Europe/Berlin\", \"Europe/Berlin\", \"Europe/London\"]\n",
     "}"
    ]
   },
@@ -114,35 +81,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "25de2a4d",
+   "execution_count": 3,
+   "id": "97680b1d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "London: Success\n",
-      "Paris: Success\n",
-      "Brussels: Success\n",
-      "Amsterdam: Success\n",
-      "Dublin: Success\n"
+      "Success\n"
      ]
     }
    ],
    "source": [
-    "response_london = requests.get(url_endpoint, params=london_params)\n",
-    "response_paris = requests.get(url_endpoint, params=paris_params)\n",
-    "response_brussels = requests.get(url_endpoint, params=brussels_params)\n",
-    "response_amsterdam = requests.get(url_endpoint, params=amsterdam_params)\n",
-    "response_dublin = requests.get(url_endpoint, params=dublin_params)\n",
+    "response = requests.get(url_endpoint, params=params)\n",
     "\n",
-    "cities = [[\"London\", response_london], [\"Paris\", response_paris], [\"Brussels\", response_brussels], [\"Amsterdam\", response_amsterdam], [\"Dublin\", response_dublin]]\n",
-    "for city in cities:\n",
-    "    if city[1].status_code == 200:\n",
-    "        print(f\"{city[0]}: Success\")\n",
-    "    else:\n",
-    "        print(f\"{city[0]}: Failure! Status code: {city[1].status_code}\")"
+    "if response.status_code == 200:\n",
+    "    print(f\"Success\")\n",
+    "else:\n",
+    "    print(f\"Failure! Status code: {response.status_code}\")"
    ]
   },
   {
@@ -150,21 +107,17 @@
    "id": "ea0775aa",
    "metadata": {},
    "source": [
-    "Store the raw data responses as a jsons:"
+    "Store the raw data responses as a json:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "fa3a1594",
+   "execution_count": 4,
+   "id": "d012228e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_data_london = response_london.json()\n",
-    "raw_data_paris = response_paris.json()\n",
-    "raw_data_brussels = response_brussels.json()\n",
-    "raw_data_amsterdam = response_amsterdam.json()\n",
-    "raw_data_dublin = response_dublin.json()"
+    "raw_data = response.json()"
    ]
   },
   {
@@ -180,21 +133,17 @@
    "id": "2180cc76",
    "metadata": {},
    "source": [
-    "Convert each json to a pandas dataframe:"
+    "Convert json to a pandas dataframe:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "f8e4652d",
+   "execution_count": 34,
+   "id": "257aeeb2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_london = pd.DataFrame(raw_data_london['daily'])\n",
-    "df_paris = pd.DataFrame(raw_data_paris['daily'])\n",
-    "df_brussels = pd.DataFrame(raw_data_brussels['daily'])\n",
-    "df_amsterdam = pd.DataFrame(raw_data_amsterdam['daily'])\n",
-    "df_dublin = pd.DataFrame(raw_data_dublin['daily'])"
+    "lat_long_df = pd.DataFrame(raw_data)"
    ]
   },
   {
@@ -202,39 +151,182 @@
    "id": "093f7bc6",
    "metadata": {},
    "source": [
-    "Add a column to each dataframe specifying the city:"
+    "Add a column specifying the city:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "07f326df",
+   "execution_count": 35,
+   "id": "7a94e982",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_london['city'] = \"London\"\n",
-    "df_paris['city'] = \"Paris\"\n",
-    "df_brussels['city'] = \"Brussels\"\n",
-    "df_amsterdam['city'] = \"Amsterdam\"\n",
-    "df_dublin['city'] = \"Dublin\""
+    "# This works because I know what order the cities were read in. \n",
+    "# If different cities were added or in a different order, this would need to change\n",
+    "cities = [\"London\", \"Paris\", \"Brussels\", \"Amsterdam\", \"Dublin\"]\n",
+    "lat_long_df = lat_long_df.assign(city = cities)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e60b8a72",
+   "id": "b9c72834",
    "metadata": {},
    "source": [
-    "Combine the dataframes into one and reset the index:"
+    "Get the `daily` data into the rows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "96680d19",
+   "execution_count": null,
+   "id": "67f4dc65",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>rain_sum</th>\n",
+       "      <th>precipitation_hours</th>\n",
+       "      <th>city</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-01-01</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>London</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-01-02</td>\n",
+       "      <td>9.6</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>London</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-01-03</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>London</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-01-04</td>\n",
+       "      <td>27.7</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>London</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-01-05</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>London</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1825</th>\n",
+       "      <td>2024-12-27</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Dublin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1826</th>\n",
+       "      <td>2024-12-28</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Dublin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1827</th>\n",
+       "      <td>2024-12-29</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Dublin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1828</th>\n",
+       "      <td>2024-12-30</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Dublin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1829</th>\n",
+       "      <td>2024-12-31</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>Dublin</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1830 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            time  rain_sum  precipitation_hours    city\n",
+       "0     2024-01-01       8.3                  8.0  London\n",
+       "1     2024-01-02       9.6                 11.0  London\n",
+       "2     2024-01-03       2.3                  6.0  London\n",
+       "3     2024-01-04      27.7                  8.0  London\n",
+       "4     2024-01-05       4.6                  8.0  London\n",
+       "...          ...       ...                  ...     ...\n",
+       "1825  2024-12-27       0.0                  0.0  Dublin\n",
+       "1826  2024-12-28       0.0                  0.0  Dublin\n",
+       "1827  2024-12-29       0.0                  0.0  Dublin\n",
+       "1828  2024-12-30       0.0                  0.0  Dublin\n",
+       "1829  2024-12-31      12.2                 16.0  Dublin\n",
+       "\n",
+       "[1830 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = pd.concat([df_london, df_paris, df_brussels, df_amsterdam, df_dublin]).reset_index(drop=True)"
+    "# list to store each 'daily' df\n",
+    "list_of_daily_dfs = []\n",
+    "# iterate through each row in the lat_long_df\n",
+    "for _, row in lat_long_df.iterrows():\n",
+    "    # make a df of just this city's daily data\n",
+    "    temp = pd.DataFrame(row['daily'])\n",
+    "    # tag it with city \n",
+    "    temp['city'] = row['city']\n",
+    "    list_of_daily_dfs.append(temp)\n",
+    "\n",
+    "# stitch all five cities’ daily dfs into one big df\n",
+    "df = pd.concat(list_of_daily_dfs, ignore_index=True)\n",
+    "df"
    ]
   },
   {
@@ -247,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "id": "1ca00f41",
    "metadata": {},
    "outputs": [],
@@ -267,8 +359,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "dfd2b5d7",
+   "execution_count": 41,
+   "id": "8457a4c8",
    "metadata": {},
    "outputs": [
     {
@@ -410,20 +502,13 @@
        "[1830 rows x 5 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rainy_day = []\n",
-    "for i in range(len(df)):\n",
-    "    if (df['rain_sum'][i] >= 2.5) or (df['precipitation_hours'][i] >= 4.0):\n",
-    "        rainy_day.append(True)\n",
-    "    else:\n",
-    "        rainy_day.append(False)\n",
-    "\n",
-    "df['rainy_day'] = rainy_day\n",
+    "df = df.assign(rainy_day = (df['rain_sum'] >= 2.5) | (df['precipitation_hours'] >= 4.0))\n",
     "df"
    ]
   },
@@ -440,25 +525,12 @@
    "id": "f5481e3f",
    "metadata": {},
    "source": [
-    "Two commands from the os library are used to save the CSV to the data folder. \n",
-    "\n",
-    "```python\n",
-    "os.makedirs(\"data\", exist_ok = True)\n",
-    "```\n",
-    "This line creates the data folder. The 'exist_ok=True' makes it so that if the folder already exists it will be used instead of throwing an error.\n",
-    "\n",
-    "\n",
-    "```python\n",
-    "csv_path = os.path.join(\"data\", \"rain_data_2024.csv\")\n",
-    "```\n",
-    "This line concatenates the \"data\" folder name with the file name. The csv_path is now `data` > `rain_data_2024.csv`\n",
-    "\n",
     "The CSV is created and saved in the proper location in the code block below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "7f9b3fae",
    "metadata": {},
    "outputs": [
@@ -471,9 +543,7 @@
     }
    ],
    "source": [
-    "os.makedirs(\"data\", exist_ok = True)\n",
-    "\n",
-    "csv_path = os.path.join(\"data\", \"rain_data_2024.csv\")\n",
+    "csv_path = \"data/rain_data_2024.csv\"\n",
     "df.to_csv(csv_path, index=False)\n",
     "print(f\"Clean data saved to {csv_path}\")"
    ]
